Add "Run and Move Down" command

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "atom-text-editor": [
       "stata-exec:run",
       "stata-exec:run-all",
+      "stata-exec:run-and-move-down",
       "stata-exec:run-paragraph",
       "stata-exec:run-previous-command",
       "stata-exec:run-program",
