--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,9 +1,9 @@
 environment:
+  PYTHON: "C:\\Python27"
   matrix:
     - nodejs_version: '10'
     - nodejs_version: '8'
     - nodejs_version: '6'
-    - PYTHON: "C:\\Python27"
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install --global npm@latest
