--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,9 +1,7 @@
 environment:
-  PYTHON: "C:\\Python27"
+  PYTHON: "C:\\Python27-x64"
   matrix:
-    - nodejs_version: '10'
     - nodejs_version: '8'
-    - nodejs_version: '6'
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install --global npm@latest
