Use run-applescript instead of node-osascript

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "atom-package-deps": "4.6.0",
     "delay": "^2.0.0",
-    "node-osascript": "1.0.4",
-    "path": "0.12.7"
+    "escape-string-applescript": "^2.0.0",
+    "path": "0.12.7",
+    "run-applescript": "^3.2.0"
   }
 }
