Try winax_all_os wrapper to only install winax on Windows

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "delay": "^2.0.0",
     "escape-string-applescript": "^2.0.0",
     "path": "0.12.7",
-    "run-applescript": "^3.2.0"
+    "run-applescript": "^3.2.0",
+    "winax_all_os": "kylebarron/winax_all_os"
   }
 }
